<resources>
    <string name="app_name">test</string>

    //Login activity

    <string name="sign_in">SIGN IN</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="forgot_btn">Forgot Password?</string>
    <string name="create_btn">Sign Up?</string>

    //Register activity

    <string name="sign_up">SIGN UP</string>
    <string name="user_name">NAME</string>
    <string name="user_nis">NIS</string>
    <string name="hint_password_confirmation">CONFIRM PASSWORD</string>
    <string name="already_btn">Sign In?</string>

    //Popup email forget password

    <string name="Email_Popup_hint">Email</string>
    <string name="Email_Popup_title">Enter your email to get your reset password link</string>

    //Group Fragment

    <string name="group_invite">INVITE</string>
    <string name="group_name">Name Group</string>
    <string name="group_background">BackgroundImage</string>

    //Post template

    <string name="divider_contentDesc">Divider</string>
    <string name="PostProf_contentDesc">PostProfilePicture</string>
    <string name="PostImage_Desc">PostImage</string>
    <string name="Like_Text">Like</string>
    <string name="Share_Text">Share</string>

    //Popup number confirmation

    <string name="Number_code_submit">SUBMIT</string>
    <string name="Cancel_button">X</string>
    <string name="Empty_String_Test">EMPTY STRING</string>
    <string name="Number_code_title">Input Code:</string>

    //bottom navigation bar

    <string name="Home_Page">Home</string>
    <string name="Quiz_Page">Quiz</string>
    <string name="Group_Page">Group</string>

    //quiz and Exam

    <string name="Exam_Name_Title">Exam name :</string>
    <string name="Finish_Question">UPLOAD</string>
    <string name="Prev_Question">BACK</string>
    <string name="Next_Question">NEXT</string>
    <string name="Final_Question">FINISH</string>
    <string name="Submit_Answer">SUBMIT</string>
    <string name="Nickname_Title">NICKNAME</string>
    <string name="Nickname_input">Input your nickname :</string>
    <string name="loading_title">User</string>
    <string name="Confirm_title">Ready ?</string>
    <string name="Confirm_yes">YES</string>
    <string name="Confirm_no">NO</string>
    <string name="Answer_1">A</string>
    <string name="Answer_2">B</string>
    <string name="Answer_3">C</string>
    <string name="Answer_4">D</string>
    <string name="Answer_5">E</string>
    <string name="declined">CANCEL</string>
    <string name="accepted">SUBMIT</string>

</resources>