<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".GroupFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/group_background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:src="@drawable/background"
                android:contentDescription="@string/group_background"/>

            <RelativeLayout
                 android:id="@+id/group_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/white">

                 <TextView
                     android:id="@+id/group_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/group_name"
                     android:textSize="20sp" />

                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/group_name"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="0dp"
                     android:text="@string/group_invite" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>