<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_title"
        android:text="@string/sign_up"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/email_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="@drawable/layout_bg_round_edge"
        android:backgroundTint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="20dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/NIS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_new"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="username"
        android:background="@drawable/layout_bg_round_edge"
        android:backgroundTint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_attribution"
        android:drawablePadding="20dp"
        android:hint="@string/user_nis"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/NIS"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="@drawable/layout_bg_round_edge"
        android:backgroundTint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_new"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="password"
        android:background="@drawable/layout_bg_round_edge"
        android:backgroundTint="@color/gray"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="20dp"
        android:hint="@string/hint_password_confirmation"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_confirm"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/create_btn"
        android:textColor="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/cyan"
        android:enabled="false"
        android:text="@string/sign_up"
        android:textColor="#37474F"
        tools:ignore="DuplicateSpeakableTextCheck" />

</RelativeLayout>