<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/layout_bg_round_edge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/popup_email_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:text="@string/Cancel_button"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/popup_nickname_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Empty_String_Test"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/popup_nickname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_nickname_title"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="Email"
            android:background="@color/light_gray"
            android:hint="@string/Quiz_Nickname_Title"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:maxLength="16"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/popup_nickname_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/popup_nickname_input"
            android:layout_centerHorizontal="true"
            android:background="@color/cyan"
            android:text="@string/Number_code_submit" />

    </RelativeLayout>

</RelativeLayout>