<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/post_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp">

        <ImageView
            android:id="@+id/post_creator_profile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:drawableStartCompat="@drawable/ic_baseline_person"
            android:contentDescription="@string/PostProf_contentDesc"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/post_creator_profile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_creator_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="Name Template"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/post_create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="99 hrs"
                android:textColor="#757575"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/post_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_creator"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="This is a template for post"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_title"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:drawableStartCompat="@drawable/background"
        android:visibility="gone"
        android:contentDescription="@string/PostImage_Desc"/>

    <RelativeLayout
        android:id="@+id/post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_image"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/post_like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:drawablePadding="10dp"
                android:text="9999"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_baseline_thumb_up"
                tools:ignore="HardcodedText" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/post_divide_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/post_info"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray"
        android:contentDescription="@string/divider_contentDesc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/post_divide_line"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/post_like_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Like_Text"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_thumb_up" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/post_share_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/Share_Text"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_baseline_share" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
