<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExamCreateActivity">

    <RelativeLayout
        android:id="@+id/exam_create_uploading_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:background="@drawable/layout_bg_round_black_edge"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/exam_create_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg_round_edge_green"
        android:padding="5dp"
        android:text="@string/accepted"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exam_create_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_bg_round_edge_red"
        android:padding="5dp"
        android:text="@string/declined"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exam_create_examName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="45sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">

        <LinearLayout
            android:id="@+id/exam_create_question_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/exam_create_more_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/layout_bg_round_black_edge"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/PostProf_contentDesc"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_add_24" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>